--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,10 +41,48 @@
         </nav>
     </header>
 
-    <div class="binvenida">
-        <!-- <img src="" alt=""> -->
-        <h1>Bienvenidos</h1>
-        <p>La Cautiva se encuentra ubicada (lo que falta)</p>
+    <div id="welcome_one" class="welcome-container">
+        <div id="welcome_text" class="w-50 welcome-text">
+            <div class="text-content">
+
+                <h2>Un lugar para disfrutar</h2>
+                <p>Turismo rural, ecoturismo, alojamiento</p>
+            </div>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide w-50">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/carrouse_1.jpg" class="d-block w-100 h-100" >
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/carrousel_2.jpg" class="d-block w-100 h-100">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/carrousel_3.jpg" class="d-block w-100 h-100">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+
+    <div class="bienvenida">
+        <h4>Bienvenidos</h4>
+       <div class="text_info">
+        <p>La Cautiva se encuentra sobre la Ruta Nacional 7 y calle Cuitiño, en el Km 991 a sólo 7 minutos de la Ciudad de Gral. San Martín, provincia de Mendoza. </p>
+        <p>La casa está emplazada en el centro de un predio de 80 hectáreas, en el que se encuentran vides, ciruelos, olivos, manzanos, durazneros y peras. Desde el año 2004, La Cautiva surge como un emprendimiento familiar que se abre a sus visitantes para que disfruten del lugar y de la naturaleza en un ambiente de calidez y comodidad.</p>
+    </div> 
     </div>
     <section class="imagenes">
         <div class="card" style="width: 18rem;">
