Estilos para imágenes container, div contacto, logos, e imágenes

--- a/index.html
+++ b/index.html
@@ -1,169 +1,292 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Cautiva</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="logo.png" alt="" class="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-flex flex-row-reverse " id="navbarNav">
-                    <ul class="navbar-nav indice">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Hospedaje</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div id="welcome_one" class="welcome-container">
-        <div id="welcome_text" class="w-50 welcome-text">
-            <div class="text-content">
-
-                <h2>Un lugar para disfrutar</h2>
-                <p>Turismo rural, ecoturismo, alojamiento</p>
-            </div>
-        </div>
-        <div id="carouselExampleIndicators" class="carousel slide w-50">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/carrouse_1.jpg" class="d-block w-100 h-100" >
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/carrousel_2.jpg" class="d-block w-100 h-100">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/carrousel_3.jpg" class="d-block w-100 h-100">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./assets/Logo.png" alt="" class="logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse d-flex flex-row-reverse"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav indice">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="index.html"
+                  style="color: white"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white">Hospedaje</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white">Contacto</a>
+              </li>
+            </ul>
           </div>
-    </div>
+        </div>
+      </nav>
+    </header>
+    <div class="body-container">
+      <div id="welcome_one" class="welcome-container">
+        <div id="welcome_text" class="w-50 welcome-text">
+          <div class="text-content">
+            <h2>Un lugar para disfrutar</h2>
+            <p>Turismo rural, ecoturismo, alojamiento</p>
+          </div>
+        </div>
 
-    <div class="bienvenida">
+        <div id="carouselExampleIndicators" class="carousel slide w-50">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/carrouse_1.jpg" class="d-block w-100 h-100" />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/carrousel_2.jpg" class="d-block w-100 h-100" />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/carrousel_3.jpg" class="d-block w-100 h-100" />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+      <div class="bienvenida">
         <h4>Bienvenidos</h4>
-       <div class="text_info">
-        <p>La Cautiva se encuentra sobre la Ruta Nacional 7 y calle Cuitiño, en el Km 991 a sólo 7 minutos de la Ciudad de Gral. San Martín, provincia de Mendoza. </p>
-        <p>La casa está emplazada en el centro de un predio de 80 hectáreas, en el que se encuentran vides, ciruelos, olivos, manzanos, durazneros y peras. Desde el año 2004, La Cautiva surge como un emprendimiento familiar que se abre a sus visitantes para que disfruten del lugar y de la naturaleza en un ambiente de calidez y comodidad.</p>
-    </div> 
-    </div>
-    <section class="imagenes">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="Foto del hostel">
-            <div class="card-body d-flex flex-column justify-content-end align-items-center">
-                <p class="card-text text-center">Turismo rural</p>
-            </div>
+        <div class="text_info">
+          <p>
+            La Cautiva se encuentra sobre la Ruta Nacional 7 y calle Cuitiño, en
+            el Km 991 a sólo 7 minutos de la Ciudad de Gral. San Martín,
+            provincia de Mendoza.
+          </p>
+          <p>
+            La casa está emplazada en el centro de un predio de 80 hectáreas, en
+            el que se encuentran vides, ciruelos, olivos, manzanos, durazneros y
+            peras. Desde el año 2004, La Cautiva surge como un emprendimiento
+            familiar que se abre a sus visitantes para que disfruten del lugar y
+            de la naturaleza en un ambiente de calidez y comodidad.
+          </p>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="Foto de la pileta">
-            <div class="card-body d-flex flex-column justify-content-end align-items-center">
-                <p class="card-text text-center">Naturaleza y pileta</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="Foto del viñedo">
-            <div class="card-body d-flex flex-column justify-content-end align-items-center">
-                <p class="card-text text-center">Viñas y bodega</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="Foto del salon">
-            <div class="card-body d-flex flex-column justify-content-end align-items-center">
-                <p class="card-text text-center">Eventos y naturaleza</p>
-            </div>
-    </section>
+      </div>
 
-    <div class="contacto">
-        <h3>No dude en comunicarse con nosotros.</h3>
-        <h3>Estaremos encantados de atenderlo.</h3>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-primary me-md-2" type="button">Contactanos</button>
+      <section class="imagenes-container">
+        <section class="imagenes">
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/turismoRural.jpg"
+              class="card-img-top"
+              alt="Foto del hostel"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Turismo rural</p>
+            </div>
+          </div>
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/casa.jpg"
+              class="card-img-top"
+              alt="Foto del hostel"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Casa de hospedaje</p>
+            </div>
+          </div>
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/pileta.jpg"
+              class="card-img-top"
+              alt="Foto de la pileta"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Naturaleza y pileta</p>
+            </div>
+          </div>
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/espacios2.jpg"
+              class="card-img-top"
+              alt="Foto del viñedo"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Espacios</p>
+            </div>
+          </div>
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/eventos_celebraciones.jpg"
+              class="card-img-top"
+              alt="Foto del salon"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Eventos y naturaleza</p>
+            </div>
+          </div>
+          <div class="card" style="width: 17rem">
+            <img
+              src="./assets/viña.jpg"
+              class="card-img-top"
+              alt="Foto del salon"
+            />
+            <div
+              class="card-body d-flex flex-column justify-content-end align-items-center"
+            >
+              <p class="card-text text-center">Viñas y Bodega</p>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <div class="contacto">
+        <div>
+          <h3>No dude en comunicarse con nosotros.</h3>
+          <h3>Estaremos encantados de atenderlo.</h3>
         </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+          <button class="btn btn-primary me-md-2" type="button">
+            Contactanos
+          </button>
+        </div>
+      </div>
     </div>
 
     <div class="container-fluid">
-        <footer class="py-4">
-            <div class="row">
-                <div class="col-6 col-md-3 mb-3">
-                    <img src="" alt="Logo La Cautiva">
-                </div>
+      <footer class="py-4">
+        <div class="row">
+          <div class="col-6 col-md-3 mb-3">
+            <img src="./assets/Logo.png" alt="Logo La Cautiva" />
+          </div>
 
-                <div class="col-6 col-md-3 mb-3">
-                    <ul class="nav flex-column text-white">
-                        <li class="nav-item mb-2 text-white"><a href="#" class="nav-link p-0 text-white">Facebook</a>
-                        </li>
-                        <li class="nav-item mb-2 text-white"><a href="#" class="nav-link p-0 text-white">Twitter</a>
-                        </li>
-                        <li class="nav-item mb-2 text-white"><a href="#" class="nav-link p-0 text-white">Instagram</a>
-                        </li>
-                    </ul>
-                </div>
+          <div class="col-6 col-md-3 mb-3">
+            <ul class="nav flex-column text-white">
+              <li class="nav-item mb-2 text-white">
+                <a href="#" class="nav-link p-0 text-white">Facebook</a>
+              </li>
+              <li class="nav-item mb-2 text-white">
+                <a href="#" class="nav-link p-0 text-white">Twitter</a>
+              </li>
+              <li class="nav-item mb-2 text-white">
+                <a href="#" class="nav-link p-0 text-white">Instagram</a>
+              </li>
+            </ul>
+          </div>
 
-                <div class="col-6 col-md-3 mb-3">
-                    <form>
-                        <p>...</p>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                            <label for="newsletter1" class="visually-hidden">Email</label>
-                            <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-                            <button class="btn btn-primary" type="button">OK</button>
-                        </div>
-                    </form>
+          <div class="col-6 col-md-3 mb-3">
+            <form>
+              <p>...</p>
+              <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                <label for="newsletter1" class="visually-hidden">Email</label>
+                <input
+                  id="newsletter1"
+                  type="text"
+                  class="form-control"
+                  placeholder="Email"
+                />
+                <button class="btn btn-primary" type="button">OK</button>
+              </div>
+            </form>
+          </div>
 
-                </div>
-
-                <div class="col-6 col-md-3 mb-3 ">
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
-                        <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
-                        <li class="nav-item mb-2 text-white">TELEFONO</li>
-                        <li class="nav-item mb-2 text-white">MAIL</li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+          <div class="col-6 col-md-3 mb-3">
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
+              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
+              <li class="nav-item mb-2 text-white">TELEFONO</li>
+              <li class="nav-item mb-2 text-white">MAIL</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
