enlaces, imágenes y creación de contacto y hospedaje sin estilos

--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white">Hospedaje</a>
+                <a class="nav-link" href="./hospedaje.html" style="color: white"
+                  >Hospedaje</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white">Contacto</a>
+                <a class="nav-link" href="./contacto.html" style="color: white"
+                  >Contacto</a
+                >
               </li>
             </ul>
           </div>
@@ -227,8 +231,12 @@
           <h3>Estaremos encantados de atenderlo.</h3>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button class="btn btn-primary me-md-2" type="button">
-            Contactanos
+          <button
+            class="btn btn-primary me-md-2"
+            type="button"
+            onclick="location.href='./contacto.html'"
+          >
+            Contáctanos
           </button>
         </div>
       </div>
@@ -244,13 +252,19 @@
           <div class="col-6 col-md-3 mb-3">
             <ul class="nav flex-column text-white">
               <li class="nav-item mb-2 text-white">
-                <a href="#" class="nav-link p-0 text-white">Facebook</a>
+                <a
+                  href="https://www.facebook.com/lacautivaturismo/?locale=es_LA"
+                  class="nav-link p-0 text-white"
+                  >Facebook</a
+                >
               </li>
+
               <li class="nav-item mb-2 text-white">
-                <a href="#" class="nav-link p-0 text-white">Twitter</a>
-              </li>
-              <li class="nav-item mb-2 text-white">
-                <a href="#" class="nav-link p-0 text-white">Instagram</a>
+                <a
+                  href="https://www.instagram.com/bodegalancellotti/"
+                  class="nav-link p-0 text-white"
+                  >Instagram</a
+                >
               </li>
             </ul>
           </div>
@@ -273,7 +287,6 @@
 
           <div class="col-6 col-md-3 mb-3">
             <ul class="nav flex-column">
-              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
               <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
               <li class="nav-item mb-2 text-white">TELEFONO</li>
               <li class="nav-item mb-2 text-white">MAIL</li>
