--- a/contacto.html
+++ b/contacto.html
@@ -69,24 +69,24 @@
     <main class="container my-5">
       <section class="text-center mb-5">
         <h1>Contacto</h1>
-        <p>
+        <p class="description">
           ¿Tienes preguntas o solicitudes? Estaremos encantados de ayudarte.
         </p>
       </section>
 
       <section class="d-flex justify-content-between mb-5">
-        <div class="text-center p-3">
+        <div class="text-center p-3 col-md-3">
           <i class="bi bi-telephone" style="font-size: 2rem"></i>
           <h4>Nos puedes llamar</h4>
           <p>02634-446507</p>
           <p>0263441904 / 02634570121</p>
         </div>
-        <div class="text-center p-3">
+        <div class="text-center p-3 col-md-3">
           <i class="bi bi-envelope" style="font-size: 2rem"></i>
           <h4>Escríbenos</h4>
           <p>lorenalanceloti@hotmail.com</p>
         </div>
-        <div class="text-center p-3">
+        <div class="text-center p-3 col-md-3">
           <i class="bi bi-geo-alt" style="font-size: 2rem"></i>
           <h4>Estamos aquí</h4>
           <p>
@@ -94,7 +94,7 @@
             Mendoza.
           </p>
         </div>
-        <div class="text-center p-3">
+        <div class="text-center p-3 col-md-3">
           <i class="bi bi-clock" style="font-size: 2rem"></i>
           <h4>Check-in / Check-out</h4>
           <p>Check in 10:00 -12:00 o de 14 a 16 hrs.</p>
@@ -103,33 +103,12 @@
       </section>
 
       <section>
-        <h2 class="text-center mb-4">Contáctanos</h2>
-        <p>
-          Por favor, completa el formulario con tus datos y preguntas. Estamos
-          aquí para ayudarte y hacer que tu estandía sea perfecta. ¡Gracias por
-          elegirnos!
-        </p>
         <div class="row">
-          <div class="col-md-6">
-            <form>
-              <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" />
-              </div>
-              <div class="mb-3">
-                <label for="telefono" class="form-label">Teléfono</label>
-                <input type="tel" class="form-control" id="telefono" />
-              </div>
-              <div class="mb-3">
-                <label for="mensaje" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="4"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
-            </form>
+          <div class="col-md-6 grey">
+            <p class="nav-item mb-2 text-white">
+              Estamos aquí para ayudarte y hacer que tu estandía sea perfecta.
+              ¡Gracias por elegirnos!
+            </p>
           </div>
           <div class="col-md-6">
             <iframe
@@ -191,9 +170,14 @@
 
           <div class="col-6 col-md-3 mb-3">
             <ul class="nav flex-column">
-              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
-              <li class="nav-item mb-2 text-white">TELEFONO</li>
-              <li class="nav-item mb-2 text-white">MAIL</li>
+              <li class="nav-item mb-2 text-white">
+                Ruta 7 y Cuitiño, km. 991 - (5570) Alto Verde, San Martin,
+                Mendoza
+              </li>
+              <li class="nav-item mb-2 text-white">02634 446507</li>
+              <li class="nav-item mb-2 text-white">
+                lorenalanceloti@hotmail.com
+              </li>
             </ul>
           </div>
         </div>
