--- a/hospedaje.html
+++ b/hospedaje.html
@@ -68,82 +68,88 @@
     <main class="container my-5">
       <section class="text-center mb-5">
         <h1>Hospedaje</h1>
-        <p>Conoce los espacios donde podrás disfrutar de La Cautiva</p>
+        <p class="description">
+          Conoce los espacios donde podrás disfrutar de La Cautiva
+        </p>
       </section>
 
-      <section class="bg-light p-4 mb-5">
-        <div class="row">
-          <div class="col-md-6">
-
-            <h2>Las habitaciones</h2>
-            <p>
-              La casa dispone de tres habitaciones, todas equipadas con camas
-              matrimoniales, una de ellas en formato suite. Además, podemos
-              agregar camas supletorias para los más pequeños si es necesario.
-              En total, la capacidad de alojamiento es para 12 personas, aunque
-              podemos adaptar áreas adicionales según las necesidades de
-              nuestros huéspedes. La estancia incluye ropa de cama y toallas,
-              pero no incluye servicio de limpieza diario.
-            </p>
-            <div class="col-md-6">
-            <img
+      <section class="bg-light p-4 mb-5 section1">
+        <div class="col-md-6 subsection">
+          <h2>Las habitaciones</h2>
+          <p>
+            La casa dispone de tres habitaciones, todas equipadas con camas
+            matrimoniales, una de ellas en formato suite. Además, podemos
+            agregar camas supletorias para los más pequeños si es necesario. En
+            total, la capacidad de alojamiento es para 12 personas, aunque
+            podemos adaptar áreas adicionales según las necesidades de nuestros
+            huéspedes. La estancia incluye ropa de cama y toallas, pero no
+            incluye servicio de limpieza diario.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
             src="./assets/habitacion1.png"
             class="img-fluid"
             alt="Habitación 1"
           />
           <img
-          src="./assets/habitacion2.png"
-          class="img-fluid"
-          alt="Habitación 2"
-        />
-    </div>
-        
-      </section>
-
-      <section class="mb-5">
-        <h2>Sala de Estar</h2>
-        <p>
-            La casa ofrece una amplia sala de estar, un cómodo espacio para comer y relajarse con televisión y conexión wifi.
-Además, cuenta con una estufa a leña que proporciona un ambiente cálido y acogedor.
-¡Disfruta de todas las comodidades y momentos especiales que este hogar tiene para ofrecer!
-        </p>
-        <div class="col-md-6">
-            <img
-            src="./assets/sala1.jpg"
+            src="./assets/habitacion2.png"
             class="img-fluid"
-            alt="Sala 1"
+            alt="Habitación 2"
           />
-          <img
-          src="./assets/sala2.jpg"
-          class="img-fluid"
-          alt="Sala 2"
-        />
-    </div>
+        </div>
       </section>
 
-      <section class="mb-5">
-        <h2>Nuestros Alrededores</h2>
-        <p>
-            Disfruta de nuestro quincho con capacidad para 60 personas, equipado con churrasquero y horno a leña para preparar y degustar todas las comidas típicas. Nuestro juego de sillas y sillones con estilo campestre ofrece un ambiente acogedor para relajarse y disfrutar.
-        </p>
-        <p>Contamos con una pileta de 3 niveles de profundidad y admira el paisaje desde nuestro mirador, que ofrece una vista panorámica de la zona. Además, contamos con un amplio estacionamiento para tu comodidad.
-            Te invitamos a disfrutar de todas estas comodidades y más en nuestro encantador espacio.
-        </p>
+      <section class="bg-light p-4 mb-5 section1">
+        <div class="col-md-6 subsection">
+          <h2>Sala de Estar</h2>
+          <p>
+            La casa ofrece una amplia sala de estar, un cómodo espacio para
+            comer y relajarse con televisión y conexión wifi. Además, cuenta con
+            una estufa a leña que proporciona un ambiente cálido y acogedor.
+            ¡Disfruta de todas las comodidades y momentos especiales que este
+            hogar tiene para ofrecer!
+          </p>
+        </div>
         <div class="col-md-6">
-            <img
+          <img src="./assets/sala1.jpg" class="img-fluid" alt="Sala 1" />
+          <img src="./assets/sala2.jpg" class="img-fluid" alt="Sala 2" />
+        </div>
+      </section>
+
+      <section class="bg-light p-4 mb-5 section1">
+        <div class="col-md-6 subsection">
+          <h2>Nuestros Alrededores</h2>
+          <p>
+            Disfruta de nuestro quincho con capacidad para 60 personas, equipado
+            con churrasquero y horno a leña para preparar y degustar todas las
+            comidas típicas. Nuestro juego de sillas y sillones con estilo
+            campestre ofrece un ambiente acogedor para relajarse y disfrutar.
+          </p>
+          <p>
+            Contamos con una pileta de 3 niveles de profundidad y admira el
+            paisaje desde nuestro mirador, que ofrece una vista panorámica de la
+            zona. Además, contamos con un amplio estacionamiento para tu
+            comodidad. Te invitamos a disfrutar de todas estas comodidades y más
+            en nuestro encantador espacio.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
             src="./assets/alrededor1.jpg"
             class="img-fluid"
             alt="Alrededor 1"
           />
           <img
-          src="./assets/alrededor2.jpg"
-          class="img-fluid"
-          alt="Alrededor 2"
-        />
-    </div>
+            src="./assets/alrededor2.jpg"
+            class="img-fluid"
+            style="width: 55%"
+            alt="Alrededor 2"
+          />
+        </div>
       </section>
 
-      <section>
+      <section class="mosaico">
         <div class="row g-2">
           <div class="col-4">
             <img
@@ -299,9 +305,14 @@ Además, cuenta con una estufa a leña que proporciona un ambiente cálido y aco
 
           <div class="col-6 col-md-3 mb-3">
             <ul class="nav flex-column">
-              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
-              <li class="nav-item mb-2 text-white">TELEFONO</li>
-              <li class="nav-item mb-2 text-white">MAIL</li>
+              <li class="nav-item mb-2 text-white">
+                Ruta 7 y Cuitiño, km. 991 - (5570) Alto Verde, San Martin,
+                Mendoza
+              </li>
+              <li class="nav-item mb-2 text-white">02634 446507</li>
+              <li class="nav-item mb-2 text-white">
+                lorenalanceloti@hotmail.com
+              </li>
             </ul>
           </div>
         </div>
