--- a/index.html
+++ b/index.html
@@ -287,9 +287,14 @@
 
           <div class="col-6 col-md-3 mb-3">
             <ul class="nav flex-column">
-              <li class="nav-item mb-2 text-white">DIRECCIÓN</li>
-              <li class="nav-item mb-2 text-white">TELEFONO</li>
-              <li class="nav-item mb-2 text-white">MAIL</li>
+              <li class="nav-item mb-2 text-white">
+                Ruta 7 y Cuitiño, km. 991 - (5570) Alto Verde, San Martin,
+                Mendoza
+              </li>
+              <li class="nav-item mb-2 text-white">02634 446507</li>
+              <li class="nav-item mb-2 text-white">
+                lorenalanceloti@hotmail.com
+              </li>
             </ul>
           </div>
         </div>
