--- a/hospedaje.html
+++ b/hospedaje.html
@@ -90,11 +90,13 @@
           <img
             src="./assets/habitacion1.png"
             class="img-fluid"
+            style="width: 35%"
             alt="Habitación 1"
           />
           <img
             src="./assets/habitacion2.png"
             class="img-fluid"
+            style="width: 50%"
             alt="Habitación 2"
           />
         </div>
@@ -112,8 +114,18 @@
           </p>
         </div>
         <div class="col-md-6">
-          <img src="./assets/sala1.jpg" class="img-fluid" alt="Sala 1" />
-          <img src="./assets/sala2.jpg" class="img-fluid" alt="Sala 2" />
+          <img
+            src="./assets/sala1.jpg"
+            class="img-fluid"
+            style="width: 35%"
+            alt="Sala 1"
+          />
+          <img
+            src="./assets/sala2.jpg"
+            class="img-fluid"
+            style="width: 50%"
+            alt="Sala 2"
+          />
         </div>
       </section>
 
@@ -138,12 +150,13 @@
           <img
             src="./assets/alrededor1.jpg"
             class="img-fluid"
+            style="width: 35%"
             alt="Alrededor 1"
           />
           <img
             src="./assets/alrededor2.jpg"
             class="img-fluid"
-            style="width: 55%"
+            style="width: 50%"
             alt="Alrededor 2"
           />
         </div>
